--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,6 +28,7 @@
 	<script src="js/NewVirtualDiskWizard.js"></script>
 	<script src="js/NewVmWizard.js"></script>
 	<script src="js/HostDetails.js"></script>
+	<script src="js/HostRowController.js"></script>
 	<script src="js/MainTabs.js"></script>
 	<script src="js/Expectations.js"></script>
 	<script src="js/ExpectationMini.js"></script>
