'add new virtual network' dialog
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -91,7 +91,7 @@
                 <i class="fa fa-sitemap"></i> Virtual networks
             </uib-tab-heading>
             <span ng-controller="VirtualNetworkTab">
-                <button type="button" class="btn btn-default glyphicon glyphicon-plus" uib-tooltip="Create new Virtual Network" tooltip-placement="right"></button>
+                <button type="button" class="btn btn-default glyphicon glyphicon-plus" uib-tooltip="Create new Virtual Network" tooltip-placement="right" ng-click="newVirtualNetwork()"></button>
             </span>
         </uib-tab>
         <uib-tab >
